<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.kenstevens.stratinit</groupId>
    <artifactId>stratinit-master</artifactId>
    <packaging>pom</packaging>
    <name>Strategic Initiative Master</name>
    <version>1.2.1-SNAPSHOT</version>
    <developers>
        <developer>
            <id>khstevens</id>
            <name>Ken Stevens</name>
            <email>ken.stevens@sympatico.ca</email>
            <url>www.strategicinitiative.org</url>
            <organization>Toccata Games</organization>
            <organizationUrl>www.strategicinitiative.org</organizationUrl>
            <timezone>EST</timezone>
        </developer>
    </developers>

    <organization>
        <name>Ken Stevens</name>
        <url>http://www.strategicinitiative.org/</url>
    </organization>
    <modules>
        <module>stratinit-core</module>
        <module>stratinit-server</module>
        <module>stratinit-dao</module>
        <module>stratinit-test</module>
        <module>stratinit-remote</module>
    </modules>
    <properties>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <stratinit.version>1.2.1-SNAPSHOT</stratinit.version>
        <stratinit.client.version>1.3</stratinit.client.version>
        <!-- FIXME need to jump to JDK 11 to use Jetty 11 -->
        <jetty.version>9.4.36.v20210114</jetty.version>
        <spring.boot.version>2.3.8.RELEASE</spring.boot.version>
        <spring.core.version>5.2.12.RELEASE</spring.core.version>
        <spring.security.version>5.3.6.RELEASE</spring.security.version>
        <spring.data>2.3.6.RELEASE</spring.data>
        <wicket.version>9.2.0</wicket.version>
        <hibernate.version>5.4.27.Final</hibernate.version>
        <swt.version>3.5.2</swt.version>
        <!-- flyway 7.5.3 doesn't work with boot 2.3.8 -->
        <flyway.version>6.5.7</flyway.version>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.8.1</version>
                    <configuration>
                        <generateBackupPoms>false</generateBackupPoms>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>11</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-core</artifactId>
                <version>${stratinit.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-images</artifactId>
                <version>${stratinit.client.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-client</artifactId>
                <version>${stratinit.client.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-dao</artifactId>
                <version>${stratinit.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-test</artifactId>
                <version>${stratinit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-remote</artifactId>
                <version>${stratinit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-jpa</artifactId>
                <version>${spring.data}</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>1.4.200</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>30.1-jre</version>
            </dependency>
            <dependency>
                <groupId>javax.persistence</groupId>
                <artifactId>javax.persistence-api</artifactId>
                <version>2.2</version>
            </dependency>
            <dependency>
                <groupId>javax.transaction</groupId>
                <artifactId>jta</artifactId>
                <version>1.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.11</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-autoconfigure</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-beans</artifactId>
                <version>${spring.core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-tx</artifactId>
                <version>${spring.core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-core</artifactId>
                <version>${spring.security.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.annotation</groupId>
                <artifactId>javax.annotation-api</artifactId>
                <version>1.3.2</version>
            </dependency>
            <dependency>
                <groupId>com.giffing.wicket.spring.boot.starter</groupId>
                <artifactId>wicket-spring-boot-starter</artifactId>
                <version>3.0.4</version>
            </dependency>
            <!-- FIXME KHS remove this and replace with https://www.baeldung.com/spring-remoting-http-invoker
            -->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-remoting</artifactId>
                <version>2.0.8</version>
            </dependency>
            <!-- FIXME KHS remove this and replace with https://www.baeldung.com/spring-remoting-http-invoker
            -->
            <dependency>
                <groupId>commons-httpclient</groupId>
                <artifactId>commons-httpclient</artifactId>
                <version>3.1</version>
            </dependency>

            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.8.0</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.15</version>
            </dependency>

            <!-- FIXME move to test -->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.core.version}</version>
                <scope>test</scope>
            </dependency>
            <!--			<dependency>-->
            <!--				<groupId>org.springframework.boot</groupId>-->
            <!--				<artifactId>spring-boot-starter-test</artifactId>-->
            <!--				<version>${spring.boot.version}</version>-->
            <!--				<scope>test</scope>-->
            <!--			</dependency>-->
            <dependency>
                <groupId>dijkstra-java</groupId>
                <artifactId>rollerjm-graphs</artifactId>
                <version>1.0</version>
                <exclusions>
                    <exclusion>
                        <artifactId>maven-sourceforge-plugin</artifactId>
                        <groupId>maven-plugins</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.2.3</version>
            </dependency>
            <dependency>
                <groupId>org.simpleframework</groupId>
                <artifactId>simple-xml</artifactId>
                <version>2.5.3</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>42.2.18</version>
            </dependency>
            <!--
            <dependency>
                <groupId>org.apache.wicket</groupId>
                <artifactId>wicket-extensions</artifactId>
                <version>${wicket.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.wicket</groupId>
                <artifactId>wicket-spring</artifactId>
                <version>${wicket.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.wicket</groupId>
                <artifactId>wicket-auth-roles</artifactId>
                <version>${wicket.version}</version>
            </dependency>
            -->
            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>1.7</version>
            </dependency>
            <dependency>
                <groupId>javax.mail</groupId>
                <artifactId>javax.mail-api</artifactId>
                <version>1.6.2</version>
            </dependency>
            <dependency>
                <groupId>org.jasypt</groupId>
                <artifactId>jasypt</artifactId>
                <version>1.9.3</version>
            </dependency>

            <!-- test -->
            <!-- FIXME replace with mockito -->
            <dependency>
                <groupId>org.jmock</groupId>
                <artifactId>jmock</artifactId>
                <version>2.12.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.8.0-M1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-server</artifactId>
                <version>${jetty.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-webapp</artifactId>
                <version>${jetty.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>4.0.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>jdepend</groupId>
                <artifactId>jdepend</artifactId>
                <version>2.9.1</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>
    <repositories>
        <repository>
            <id>central</id>
            <name>Maven Repository Switchboard</name>
            <layout>default</layout>
            <url>https://repo1.maven.org/maven2</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>mvn</id>
            <url>http://mirrors.ibiblio.org/pub/mirrors/maven2</url>
        </repository>
        <repository>
            <id>dijkstra-java.sf.net</id>
            <url>http://downloads.sourceforge.net/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>